test/typeCheckTest/fail/test13.ic
class NoMain {
	int someMethod () {
		return 0;
	}
}